--- a/app/src/main/res/layout/bus_item.xml
+++ b/app/src/main/res/layout/bus_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="10dp"
     android:layout_marginStart="5dp"
@@ -41,20 +42,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <!--    <TextView-->
-    <!--        android:id="@+id/txtETA"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="40dp"-->
-    <!--        android:paddingTop="10dp"-->
-    <!--        android:text="in 3 mins"-->
-    <!--        android:textSize="25sp"-->
-    <!--        android:textStyle="bold"-->
-    <!--        app:layout_constraintLeft_toRightOf="@+id/txtBusEnd"-->
-    <!--        app:layout_constraintRight_toRightOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent">-->
-    <!--    </TextView>-->
-
-    <!--    <TextView-->
     <!--        android:id="@+id/txtDeparture"-->
     <!--        android:layout_width="wrap_content"-->
     <!--        android:layout_height="wrap_content"-->
@@ -66,26 +53,36 @@
     <!--        >-->
     <!--    </TextView>-->
 
-    <!--    <ImageView-->
-    <!--        android:id="@+id/imgWarning"-->
-    <!--        android:layout_width="50dp"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:layout_marginStart="4dp"-->
-    <!--        android:layout_marginTop="4dp"-->
-    <!--        android:paddingTop="5dp"-->
-    <!--        android:paddingBottom="5dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@id/txtBusStart"-->
-    <!--        app:layout_constraintVertical_bias="0.0"-->
-    <!--        tools:srcCompat="@drawable/ic_baseline_warning_24">-->
 
-    <!--    </ImageView>-->
+
+    <TextView
+        android:id="@+id/txtETA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:text="in 3 mins"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toRightOf="@+id/txt_destination"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
     <View
+        android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000000"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_destination" />
+        android:paddingTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/txtTimeStamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Last Updated at: "
+        app:layout_constraintBottom_toTopOf="@+id/view2"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
