--- a/app/src/main/res/layout/fragment_bus_summary.xml
+++ b/app/src/main/res/layout/fragment_bus_summary.xml
@@ -31,23 +31,36 @@
         app:layout_constraintTop_toBottomOf="@+id/txtBusTitle" />
 
     <View
+        android:id ="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/recycler_buses" />
+        app:layout_constraintBottom_toTopOf="@+id/swipe_layout"
+        app:layout_constraintTop_toBottomOf="@+id/txt_bus_total" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_buses"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
         android:layout_height="427dp"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="12dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_bus_total"
-        app:layout_constraintVertical_bias="0.291"
-        tools:listitem="@layout/bus_item" />
+        app:layout_constraintTop_toBottomOf="@id/line">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_buses"
+            android:layout_width="match_parent"
+            android:layout_height="427dp"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_bus_total"
+            app:layout_constraintVertical_bias="0.291"
+            tools:listitem="@layout/bus_item" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <Button
         android:id="@+id/btn_comments"
@@ -55,7 +68,7 @@
         android:layout_height="wrap_content"
         android:text="16 comments"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/recycler_buses"
+        app:layout_constraintBottom_toTopOf="@+id/swipe_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.895"
         app:layout_constraintStart_toStartOf="parent"
