--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -19,8 +19,6 @@
         android:text="This is example comment"
         android:textSize="15dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></TextView>
 
@@ -38,86 +36,36 @@
         app:layout_constraintTop_toBottomOf="@id/txtComments"></TextView>
 
 
-    <RatingBar
-        android:id="@+id/ratingBar"
-        style="@android:style/Widget.Holo.RatingBar.Indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:rating="3.5"
-        android:progressTint="#FF8585"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imgThumbUp"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="128dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ratingBar"
-        app:layout_constraintVertical_bias="1.0"
-        android:src="@drawable/ic_baseline_thumb_up_24"
-        >
-    </ImageView>
-
-    <TextView
-        android:id="@+id/txtCountDown"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginEnd="16dp"
-        android:text="00"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imgThumbDown"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.907">
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/txtCountUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:text="00"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toStartOf="@+id/imgThumbDown"
-        app:layout_constraintHorizontal_bias="0.472"
-        app:layout_constraintStart_toEndOf="@+id/imgThumbUp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-    </TextView>
-
-    <ImageView
-        android:id="@+id/imgThumbDown"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="52dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ratingBar"
-        app:layout_constraintVertical_bias="1.0"
-        android:src="@drawable/ic_baseline_thumb_down_24">
-
-    </ImageView>
-
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#000000"
-        app:layout_constraintTop_toBottomOf="@id/txtAuthor"
-/>
+        app:layout_constraintTop_toBottomOf="@id/txtAuthor" />
+
+    <ImageView
+        android:id="@+id/imgWarning"
+        android:layout_width="64dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="244dp"
+        android:src="@drawable/bus_icon"
+        android:tint="#808080"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.464" />
+
+    <ImageView
+        android:id="@+id/imgWarning2"
+        android:layout_width="64dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="320dp"
+        android:src="@drawable/ic_baseline_warning_24"
+        android:tint="#808080"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.464" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
