--- a/app/src/main/res/drawable/button_bus.xml
+++ b/app/src/main/res/drawable/button_bus.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/white"> <!-- Ripple Effect 색상 -->
+    android:color="@color/black">
 
-    <!-- 배경색 -->
     <item android:id="@android:id/background">
 
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
