--- a/app/src/main/res/layout/fragment_search_by.xml
+++ b/app/src/main/res/layout/fragment_search_by.xml
@@ -24,58 +24,19 @@
 
     <Button
         android:id="@+id/btn_bus_stop"
-        android:layout_width="170dp"
-        android:layout_height="230dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="285dp"
+        android:layout_height="241dp"
+        android:layout_marginTop="108dp"
         android:drawableTop="@drawable/bus_stop_icon_state"
+        android:background="@drawable/button_bus"
         android:fontFamily="@font/maru_regular"
         android:paddingTop="30dp"
-        android:text="STOP"
+        android:text="STOPS"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtSearchByTitle" />
-
-    <Button
-        android:id="@+id/btn_bus"
-        android:layout_width="170dp"
-        android:layout_height="230dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="180dp"
-        android:drawableTop="@drawable/bus_icon_state"
-        android:fontFamily="@font/maru_regular"
-        android:paddingTop="40dp"
-        android:text="@string/bus"
-        android:textSize="40dp"
-        app:layout_constraintEnd_toStartOf="@+id/btn_bus_stop"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtSearchByTitle" />
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_view"
-        android:layout_width="265dp"
-        android:layout_height="46dp"
-        app:iconifiedByDefault="false"
-        app:layout_constraintBottom_toTopOf="@+id/btn_bus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.297"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtSearchByTitle"
-        app:layout_constraintVertical_bias="0.315"
-        app:queryHint="Search by Bus or Bus Stops " />
-
-    <ImageButton
-        android:id="@+id/btn_Favorite"
-        android:layout_width="54dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="91dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_bus_stop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/search_view"
-        app:srcCompat="@drawable/ic_baseline_star_24"
-        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
